# bc-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
_scripts/: autocommit.sh
bootcamp/semana-01/: README.md
bootcamp/semana-01/1-teoria/: 02-porque-rust.md  03-setup-entorno.md  04-cargo-basics.md
bootcamp/semana-01/1-theory/: 01-que-es-rust.md
bootcamp/semana-01/2-practica/: README.md
bootcamp/semana-01/4-resources/: README.md
bootcamp/semana-01/5-glossary/: README.md
bootcamp/semana-02/: README.md  rubrica-evaluacion.md
bootcamp/semana-02/1-teoria/: 01-variables-inmutables.md
bootcamp/semana-02/1-theory/: 02-variables-mutables.md  03-tipos-primitivos.md  05-constantes.md
bootcamp/semana-02/5-glosario/: README.md
bootcamp/semana-03/: rubrica-evaluacion.md
bootcamp/semana-03/1-teoria/: 01-definicion-structs.md  02-instanciacion-acceso.md  03-metodos-impl.md  04-funciones-asociadas.md  05-tipos-structs.md
bootcamp/semana-03/1-theory/: 01-definicion-structs.md
bootcamp/semana-03/5-glosario/: README.md
bootcamp/semana-04/: RUBRICA_EVALUACION.md
bootcamp/semana-04/1-teoria/: 01-sistema-ownership.md  02-move-copy.md  03-referencias-borrowing.md  04-reglas-borrowing.md  05-ownership-funciones.md
bootcamp/semana-04/5-glosario/: README.md
bootcamp/semana-05/: RUBRICA_EVALUACION.md
bootcamp/semana-05/1-teoria/: 01-definicion-enums.md  02-enums-con-datos.md  03-pattern-matching.md  04-if-let-while-let.md  05-option-result.md
bootcamp/semana-05/1-theory/: 05-option-result.md
bootcamp/semana-05/5-glosario/: README.md
bootcamp/semana-06/: README.md
bootcamp/semana-06/1-teoria/: 02-result-profundidad.md  03-propagacion-errores.md  04-errores-personalizados.md  05-patrones-practicas.md
bootcamp/semana-06/5-glosario/: glosario.md
bootcamp/semana-07/1-teoria/: 01-sistema-modulos.md  03-paths-use.md  04-archivos-carpetas.md
bootcamp/semana-07/1-theory/: 02-visibilidad-pub.md
bootcamp/semana-07/4-recursos/: videografia.md  webgrafia.md
bootcamp/semana-08/: README.md  RUBRICA_EVALUACION.md
bootcamp/semana-08/1-teoria/: 02-strings.md  05-patrones-colecciones.md
bootcamp/semana-08/4-recursos/: ebook-free.md  videografia.md  webgrafia.md
bootcamp/semana-09/: README.md
bootcamp/semana-09/1-teoria/: 02-implementacion-traits.md
bootcamp/semana-09/1-theory/: 05-trait-bounds.md
bootcamp/semana-09/4-recursos/: ebook-free.md
bootcamp/semana-09/4-resources/: videografia.md
bootcamp/semana-09/5-glosario/: glosario.md
bootcamp/semana-10/1-teoria/: 02-funciones-genericas.md  04-trait-bounds.md  05-generics-avanzados.md
bootcamp/semana-10/4-recursos/: RECURSOS.md
bootcamp/semana-10/5-glosario/: GLOSARIO.md
bootcamp/semana-11/1-teoria/: 01-introduccion-lifetimes.md  02-lifetimes-funciones.md  03-lifetimes-structs.md  04-elision-rules.md  05-lifetimes-avanzados.md
bootcamp/semana-11/4-recursos/: RECURSOS.md
bootcamp/semana-12/: README.md  RUBRICA_EVALUACION.md
bootcamp/semana-12/1-teoria/: 01-introduccion-closures.md  02-captura-entorno.md
bootcamp/semana-12/4-recursos/: RECURSOS.md
bootcamp/semana-12/5-glosario/: GLOSARIO.md
bootcamp/semana-13/: README.md  RUBRICA_EVALUACION.md
bootcamp/semana-13/1-teoria/: 01-box.md  01-introduccion-smart-pointers.md  02-box.md  02-rc-arc.md  03-rc-arc.md  03-refcell.md  04-interior-mutability.md  04-refcell.md  05-patrones-avanzados.md  05-patrones.md
bootcamp/semana-13/3-recursos/: GLOSARIO.md
bootcamp/semana-13/4-recursos/: RECURSOS.md
bootcamp/semana-13/5-glosario/: GLOSARIO.md
bootcamp/semana-14/1-teoria/: 03-mutex.md  04-send-sync.md  05-patrones.md
bootcamp/semana-14/1-theory/: 01-threads.md
bootcamp/semana-14/3-recursos/: GLOSARIO.md  RECURSOS.md
bootcamp/semana-15/: README.md  RUBRICA_EVALUACION.md
bootcamp/semana-15/1-teoria/: 01-fundamentos.md  02-futures.md  03-tokio.md  04-io-async.md  05-patrones.md
bootcamp/semana-15/1-theory/: 01-fundamentos.md  02-futures.md  04-io-async.md
bootcamp/semana-15/3-recursos/: GLOSARIO.md  RECURSOS.md
bootcamp/semana-16/: RUBRICA_EVALUACION.md
bootcamp/semana-16/1-teoria/: 03-test-organization.md  04-rustdoc.md
bootcamp/semana-16/1-theory/: 01-unit-tests.md
bootcamp/semana-17/1-teoria/: 01-intro-axum.md
bootcamp/semana-17/1-theory/: 04-estado-capas.md  05-proyecto-completo.md
bootcamp/semana-17/2-practica/proyecto-api-tareas/: Cargo.toml  README.md
bootcamp/semana-17/2-practica/proyecto-api-tareas/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
bootcamp/semana-17/2-practica/proyecto-api-tareas/tests/: api_tests.rs
bootcamp/semana-17/3-recursos/: GLOSARIO.md
bootcamp/week-01/: README.md  rubrica-evaluacion.md
bootcamp/week-02/1-theory/: 04-shadowing.md
bootcamp/week-03/: README.md
bootcamp/week-03/1-theory/: 02-instanciacion-acceso.md
bootcamp/week-04/: README.md
bootcamp/week-04/1-theory/: 05-ownership-funciones.md
bootcamp/week-05/: README.md
bootcamp/week-05/1-theory/: 03-pattern-matching.md  04-if-let-while-let.md
bootcamp/week-06/: RUBRICA_EVALUACION.md
bootcamp/week-06/1-theory/: 01-tipos-de-errores.md
bootcamp/week-07/: README.md  RUBRICA_EVALUACION.md
bootcamp/week-07/1-theory/: 05-crates-cargo.md
bootcamp/week-07/2-practice/practice-04-crates-externos/: Cargo.toml  README.md
bootcamp/week-07/4-resources/: ebook-free.md
bootcamp/week-09/: RUBRICA_EVALUACION.md
bootcamp/week-10/: README.md  RUBRICA_EVALUACION.md
bootcamp/week-11/: README.md  RUBRICA_EVALUACION.md
bootcamp/week-13/: README.md  RUBRICA_EVALUACION.md
bootcamp/week-14/: README.md  RUBRICA_EVALUACION.md
bootcamp/week-15/2-practice/proyecto-crawler/: Cargo.toml  README.md
bootcamp/week-16/: README.md
bootcamp/week-16/1-theory/: 05-tdd.md  (+1 more)
bootcamp/week-17/: README.md  RUBRICA_EVALUACION.md
(+555 files in other folders)
