[workspace]
resolver = "2"

members = [
    # Semana 00 - Setup
    # "bootcamp/semana-00/2-practica/ejercicio-01-hello-world",
    
    # Semana 07 - Módulos y Crates
    "bootcamp/semana-07/2-practica/practica-01-modulos-basicos",
    "bootcamp/semana-07/2-practica/practica-02-visibilidad",
    "bootcamp/semana-07/2-practica/practica-03-estructura-archivos",
    "bootcamp/semana-07/2-practica/practica-04-crates-externos",
    "bootcamp/semana-07/3-proyecto/proyecto-geometria",
    
    # Semana 08 - Colecciones
    "bootcamp/semana-08/2-practica/practica-01-vectores",
    "bootcamp/semana-08/2-practica/practica-02-strings",
    "bootcamp/semana-08/2-practica/practica-03-hashmaps",
    "bootcamp/semana-08/2-practica/practica-04-iteradores",
    "bootcamp/semana-08/3-proyecto/proyecto-inventario",
    
    # Semana 09 - Traits Básicos
    "bootcamp/semana-09/2-practica/practica-01-definir-traits",
    "bootcamp/semana-09/2-practica/practica-02-implementar-traits",
    "bootcamp/semana-09/2-practica/practica-03-traits-derivables",
    "bootcamp/semana-09/2-practica/practica-04-trait-bounds",
    "bootcamp/semana-09/3-proyecto/proyecto-formas",
    
    # Semana 10 - Genéricos
    "bootcamp/semana-10/2-practica/practica-01-funciones-genericas",
    "bootcamp/semana-10/2-practica/practica-02-structs-genericos",
    "bootcamp/semana-10/2-practica/practica-03-trait-bounds",
    "bootcamp/semana-10/2-practica/practica-04-generics-avanzados",
    "bootcamp/semana-10/3-proyecto/proyecto-contenedor",
    
    # Semana 11 - Lifetimes
    "bootcamp/semana-11/2-practica/practica-01-lifetimes-basicos",
    "bootcamp/semana-11/2-practica/practica-02-lifetimes-structs",
    "bootcamp/semana-11/2-practica/practica-03-elision",
    "bootcamp/semana-11/2-practica/practica-04-lifetimes-avanzados",
    "bootcamp/semana-11/3-proyecto/proyecto-parser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bootcamp Rust"]
license = "MIT"

[workspace.dependencies]
# Dependencias comunes del workspace
