[workspace]
resolver = "2"

members = [
    # Semana 00 - Setup
    # "bootcamp/semana-00/2-practica/ejercicio-01-hello-world",
    
    # Semana 07 - Módulos y Crates
    "bootcamp/semana-07/2-practica/practica-01-modulos-basicos",
    "bootcamp/semana-07/2-practica/practica-02-visibilidad",
    "bootcamp/semana-07/2-practica/practica-03-estructura-archivos",
    "bootcamp/semana-07/2-practica/practica-04-crates-externos",
    "bootcamp/semana-07/3-proyecto/proyecto-geometria",
    
    # Semana 08 - Colecciones
    "bootcamp/semana-08/2-practica/practica-01-vectores",
    "bootcamp/semana-08/2-practica/practica-02-strings",
    "bootcamp/semana-08/2-practica/practica-03-hashmaps",
    "bootcamp/semana-08/2-practica/practica-04-iteradores",
    "bootcamp/semana-08/3-proyecto/proyecto-inventario",
    
    # Semana 09 - Traits Básicos
    "bootcamp/semana-09/2-practica/practica-01-definir-traits",
    "bootcamp/semana-09/2-practica/practica-02-implementar-traits",
    "bootcamp/semana-09/2-practica/practica-03-traits-derivables",
    "bootcamp/semana-09/2-practica/practica-04-trait-bounds",
    "bootcamp/semana-09/3-proyecto/proyecto-formas",
    
    # Semana 10 - Genéricos
    "bootcamp/semana-10/2-practica/practica-01-funciones-genericas",
    "bootcamp/semana-10/2-practica/practica-02-structs-genericos",
    "bootcamp/semana-10/2-practica/practica-03-trait-bounds",
    "bootcamp/semana-10/2-practica/practica-04-generics-avanzados",
    "bootcamp/semana-10/3-proyecto/proyecto-contenedor",
    
    # Semana 11 - Lifetimes
    "bootcamp/semana-11/2-practica/practica-01-lifetimes-basicos",
    "bootcamp/semana-11/2-practica/practica-02-lifetimes-structs",
    "bootcamp/semana-11/2-practica/practica-03-elision",
    "bootcamp/semana-11/2-practica/practica-04-lifetimes-avanzados",
    "bootcamp/semana-11/3-proyecto/proyecto-parser",
    
    # Semana 12 - Closures e Iteradores
    "bootcamp/semana-12/2-practica/practica-01-closures-basicos",
    "bootcamp/semana-12/2-practica/practica-02-captura",
    "bootcamp/semana-12/2-practica/practica-03-fn-traits",
    "bootcamp/semana-12/2-practica/practica-04-iteradores",
    "bootcamp/semana-12/3-proyecto/proyecto-pipeline",
    
    # Semana 13 - Smart Pointers
    "bootcamp/semana-13/2-practica/practica-01-box",
    "bootcamp/semana-13/2-practica/practica-02-rc-arc",
    "bootcamp/semana-13/2-practica/practica-03-refcell",
    "bootcamp/semana-13/2-practica/practica-04-weak",
    "bootcamp/semana-13/2-practica/proyecto-cache",
    
    # Semana 14 - Concurrencia
    "bootcamp/semana-14/2-practica/practica-01-threads",
    "bootcamp/semana-14/2-practica/practica-02-channels",
    "bootcamp/semana-14/2-practica/practica-03-mutex",
    "bootcamp/semana-14/2-practica/practica-04-patrones",
    "bootcamp/semana-14/2-practica/proyecto-workers",
    
    # Semana 15 - Async/Await
    "bootcamp/semana-15/2-practica/practica-01-async-basico",
    "bootcamp/semana-15/2-practica/practica-02-tokio",
    "bootcamp/semana-15/2-practica/practica-03-io-async",
    "bootcamp/semana-15/2-practica/practica-04-channels",
    "bootcamp/semana-15/2-practica/proyecto-crawler",
    
    # Semana 16 - Testing y Documentación
    "bootcamp/semana-16/2-practica/practica-01-unit-tests",
    "bootcamp/semana-16/2-practica/practica-02-integration",
    "bootcamp/semana-16/2-practica/practica-03-doctests",
    "bootcamp/semana-16/2-practica/practica-04-tdd",
    "bootcamp/semana-16/2-practica/proyecto-calculadora-testeada",
    
    # Semana 17 - API REST con Axum
    "bootcamp/semana-17/2-practica/practica-01-hello-axum",
    "bootcamp/semana-17/2-practica/practica-02-crud",
    "bootcamp/semana-17/2-practica/practica-03-validacion",
    "bootcamp/semana-17/2-practica/practica-04-middleware",
    "bootcamp/semana-17/2-practica/proyecto-api-tareas",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bootcamp Rust"]
license = "MIT"

[workspace.dependencies]
# Dependencias comunes del workspace
