[package]
name = "practica-crates-externos"
version = "0.1.0"
edition = "2024"
description = "Practice 04: External crates - Using dependencies from crates.io"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
