[package]
name = "proyecto-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
scraper = "0.22"
url = "2"
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
